# defty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  STRUCTURE.md  install.ps1  install.sh  pyproject.toml
spec/: project-yaml.md  skill-format.md
src/defty/: __init__.py  __version__.py  cli.py  platform.py  project.py  utils.py
src/defty/agents/: __init__.py  manager.py  parser.py  ref.py  registry.py
src/defty/cloud/: __init__.py  config.py  trainer.py  uploader.py
src/defty/hardware/: __init__.py  detector.py  fingerprint.py  health.py  registry.py
src/defty/inference/: __init__.py  runner.py
src/defty/nodes/: __init__.py  base.py  control.py  engine.py  motion.py  perception.py  policy.py  utility.py
src/defty/nodes/robots/: __init__.py  so101.py
src/defty/recording/: __init__.py  recorder.py
src/defty/training/: __init__.py  trainer.py
tests/: test_agents.py  test_nodes.py  test_platform.py  test_project.py  test_registry.py
