# Copyright (c) 2026 APRL Technologies Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0

[build-system]
requires = ["setuptools>=71.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "defty"
version = "0.2.4"
description = "Physical AI IDE — local-first IDE and skill format standard for robot intelligence development"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Yiju Li", email = "yiju@aprl.tech" },
]
keywords = ["defty", "robotics", "physical-ai", "lerobot", "skill-format"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1.0,<9.0.0",
    "pyyaml>=6.0,<7.0",
    "pyserial>=3.5,<4.0",
    "lerobot[feetech]>=0.5.0",
    "torch>=2.3.0",  # explicit so [tool.uv.sources] index selection applies
    "huggingface-hub>=0.20.0",
    "transformers>=4.38.0",  # required by VLA policies (pi0, pi0_fast, smolvla, etc.)
]

[project.optional-dependencies]
cuda = ["torch>=2.3.0"]  # activates pytorch-cu124 index via [tool.uv.sources] marker
cloud-google = [
    "google-cloud-aiplatform>=1.38.0",
]
cloud-azure = [
    "azure-ai-ml>=1.12.0",
    "azure-identity>=1.15.0",
]
dev = [
    "ruff>=0.5.0",
    "pre-commit>=3.7.0,<5.0.0",
    "pytest>=8.1.0,<9.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
]

[project.scripts]
defty = "defty.cli:main"

[project.urls]
homepage = "https://github.com/asd125202/defty"
source = "https://github.com/asd125202/defty"
issues = "https://github.com/asd125202/defty/issues"

[tool.setuptools.packages.find]
where = ["src"]

# ── uv configuration ──────────────────────────────────────────────────────────
# uv selects the correct torch wheel based on the platform:
#   - NVIDIA GPU  → torch with CUDA (cu121 or cu124)
#   - Apple Silicon → torch with MPS (standard PyPI wheel works)
#   - CPU-only    → lightweight torch+cpu wheel
#
# Users with NVIDIA GPUs should run:
#   uv sync --extra cuda
#
# uv index docs: https://docs.astral.sh/uv/guides/package-indexes/

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# Default: CPU wheel (works everywhere, used during `uv tool install`)
# Override in uv.toml or pass --extra cuda for GPU training
torch = [
    { index = "pytorch-cu124", marker = "extra == 'cuda'" },
    { index = "pytorch-cpu",   marker = "extra != 'cuda'" },
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "T20", "N", "UP", "SIM"]
ignore = ["E501", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["defty"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
